--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-family: monospace;
 }
 
 .App {
@@ -40,7 +41,29 @@ main {
   text-transform: uppercase;
 }
 
-.cards > *:hover {
+.cards > *:hover, button:hover {
   opacity: 0.8;
 }
 
+form input, form button {
+  background-color: #282c34;
+  color: white;
+  padding: 10px;
+  outline: none;
+  border: 1px solid white;  
+  border-radius: 10px;
+  margin: 5px;
+}
+
+form input{
+  opacity: 0.8;
+}
+
+.fruit {
+  display: flex;
+  justify-content: space-between;
+}
+
+.red { background: red; }
+.yellow { background: yellow; }
+.green { background: green; }
