Added solution lifecycle - ex #2

--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,7 @@ form input, form button {
   justify-content: space-between;
 }
 
+/* color classes */
 .red { background: red; }
 .yellow { background: yellow; }
 .green { background: green; }
